<resources>
    <string name="app_name">Finanças</string>
    <string name="action_settings">Settings</string>
    <string name="str_btn_inserir">Inserir Despesas</string>
    <string name="str_btn_relatorio">Relatório</string>
    <string name="str_btn_configs">Configurações</string>
    <string name="str_label_descricao">Descrição</string>
    <string name="str_label_valor">Valor</string>
    <string name="str_label_data">Data:</string>
    <string name="str_btn_inserir_registro">Inserir Despesa</string>
    <string name="str_tela_inserir">Salvar despesa</string>
    <string name="str_btn_del">Apagar despesa!</string>
    <string name="str_msg_rg_salvo">"Despesa salva com sucesso! "</string>
    <string name="title_activity_ver_despesas">Ver Despesas</string>
    <string name="title_activity_atualizar_despesa">Atualizar Despesa</string>
    <string name="str_btn_atualizar_registro">Atualizar Despesa</string>
    <string name="str_btn_voltar">Voltar</string>
    <string name="str_btn_editar">Salvar Edições</string>
    <string name="str_msg_rg_editado">Despesa editada com sucesso!</string>
    <string name="str_dlg_del_title">Excluir despesa</string>
    <string name="str_msg_dlg_del">Tem certeza que deseja excluir essa despesa?</string>
    <string name="str_dlg_s">Sim</string>
    <string name="str_dlg_n">Não</string>
    <string name="str_dlg_cancel">Operação cancelada</string>
    <string name="str_modelo_data">(dia/mês)</string>
    <string name="str_not_mes">Selecione um mês válido.</string>
    <string name="str_mes_max_min">Meses de 1 a 12.</string>
    <string name="str_not_val">Existem campos a completar.</string>
    <string name="str_mesdia_max_min">Mês ou dia do mês inválidos!</string>
    <string name="str_tela_rel">Despesas</string>
    <string name="str_tela_opcoes">Opções</string>
    <string name="str_renda">Renda: R$</string>
    <string name="str_gastos">Gastos no mês: R$</string>
    <string name="str_saldo">Saldo: R$</string>
    <string name="str_alerta">Renda insuficiente</string>
    <string name="str_msg_dlg_est">Tem certeza que deseja estourar o orçamento?</string>
    <string name="str_msg_estouro">Estouro de orçamento?</string>
    <string name="srt_rs">R$:</string>
    <string name="str_data">Data:</string>
    <string name="str_renda_salva">Renda mensal salva com sucesso!</string>
</resources>
